--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,18 @@
   path = wiki
   url = https://github.com/BaseCpp/BaseApp.wiki.git
 
+[submodule "magic_get"]
+  path = thirdparty/boost/magic_get
+  url = https://github.com/apolukhin/magic_get.git
+
+[submodule "stacktrace"]
+  path = thirdparty/boost/stacktrace
+  url = https://github.com/apolukhin/stacktrace.git
+
+[submodule "di"]
+  path = thirdparty/boost/di
+  url = https://github.com/boost-experimental/di.git
+
+[submodule "application"]
+  path = thirdparty/boost/application
+  url = https://github.com/retf/Boost.Application.git
