--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,7 @@
+
 [submodule "gate"]
-  path = gate
-  url = https://github.com/hunter-packages/gate.git
-
-[submodule "wiki"]
-  path = wiki
-  url = https://github.com/BaseCpp/BaseApp.wiki.git
-
-[submodule "magic_get"]
-  path = thirdparty/boost/magic_get
-  url = https://github.com/apolukhin/magic_get.git
-
-
-[submodule "di"]
-  path = thirdparty/boost/di
-  url = https://github.com/boost-experimental/di.git
-
-[submodule "application"]
-  path = thirdparty/boost/application
-  url = https://github.com/retf/Boost.Application.git
-  
-[submodule "stacktrace"]
-	path = thirdparty/stacktrace
+	path = gate
+	url = https://github.com/hunter-packages/gate.git
+[submodule "thridparty/stacktrace"]
+	path = thridparty/stacktrace
 	url = https://github.com/apolukhin/stacktrace.git
