--- a/.gitmodules
+++ b/.gitmodules
@@ -2,11 +2,8 @@
 [submodule "gate"]
 	path = gate
 	url = https://github.com/hunter-packages/gate.git
-[submodule "thirdparty/stacktrace"]
-	path = thirdparty/stacktrace
-	url = https://github.com/apolukhin/stacktrace.git
 [submodule "thirdparty/boost/di"]
-	path = thridparty/boost/di
+	path = thirdparty/boost/di
 	url = https://github.com/boost-experimental/di.git
 [submodule "thirdparty/boost/magic_get"]
 	path = thirdparty/boost/magic_get
@@ -17,3 +14,6 @@
 [submodule "thirdparty/boost/boost.http"]
 	path = thirdparty/boost/boost.http
 	url = https://github.com/BoostGSoC14/boost.http.git
+[submodule "thirdparty/boost/stacktrace"]
+	path = thirdparty/boost/stacktrace
+	url = https://github.com/apolukhin/stacktrace.git
