--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,13 @@ cmake_minimum_required(VERSION 3.0)
 
 
 include("gate/cmake/HunterGate.cmake")
+#HunterGate(
+#        URL "https://github.com/ruslo/hunter/archive/v0.16.24.tar.gz"
+#        SHA1 "00ab627d3d4fe5151e15b6ab2b1b1da17650984a"
+#)
 HunterGate(
-        URL "https://github.com/ruslo/hunter/archive/v0.16.24.tar.gz"
-        SHA1 "00ab627d3d4fe5151e15b6ab2b1b1da17650984a"
+    URL "https://github.com/ruslo/hunter/archive/v0.19.7.tar.gz"
+    SHA1 "e83786da74f703099fce44a4c021b5d3e5fc3b41"
 )
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -60,10 +64,10 @@ if(WIN32)
     SET(BOOST_ROOT "F:/github.cpp-repo/boost_1_61_0")
         SET(Boost_USE_STATIC_LIBS ON)
         add_definitions(-D_WIN32_WINNT=0x0601)
-        FIND_PACKAGE( Boost 1.6.0 COMPONENTS atomic system log filesystem thread date_time timer serialization regex iostreams chrono log_setup REQUIRED )
+        FIND_PACKAGE( Boost 1.5.8 COMPONENTS atomic system log filesystem thread date_time timer serialization regex iostreams chrono log_setup REQUIRED )
 else(WIN32)
-	hunter_add_package(Boost ) # COMPONENTS ${BoostMod})
-        FIND_PACKAGE( Boost 1.6.0 COMPONENTS atomic system log filesystem thread date_time timer serialization regex iostreams chrono log_setup REQUIRED )
+        #hunter_add_package(Boost ) # COMPONENTS ${BoostMod})
+        FIND_PACKAGE( Boost 1.5.8 COMPONENTS atomic system log filesystem thread date_time timer serialization regex iostreams chrono log_setup REQUIRED )
 endif(WIN32)
 INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} .)
 
@@ -76,13 +80,13 @@ set( headers
         QtScheduler.h
         AppWidget.h)
 
-set( srcs main.cpp
+set( SOURCES main.cpp
         QtApplication.cpp
         AppWidget.cpp
         QtScheduler.cpp
         )
 
-add_executable(baseapp ${srcs})
+add_executable(baseapp ${SOURCES})
 target_link_libraries(baseapp
         Async++::Async++
         Poco::Foundation Poco::Util Poco::XML Poco::Net
@@ -91,4 +95,4 @@ target_link_libraries(baseapp
         )
 
 
-add_subdirectory(boost)
+#add_subdirectory(boost)
